# lsp-install

./: .gitignore  README.md  dev-requirements.txt  justfile  pyproject.toml  requirements.txt
lspinstall/: __init__.py  main.py  servers.py  test_servers.py  util.py
lspinstall/source/: __init__.py  archive.py  base.py  go.py  npm.py  pip.py
