[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lspinstall"
version = "0.5.0"
dependencies = [ "requests" ]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "flake8"]

[project.scripts]
lspinstall = "lspinstall.main:main"
